// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/activity_and_insights/insights/insights_title should match snapshot with data 1`] = `
<Card
  className="insights-card expanded top-channels-card small"
>
  <CardHeader
    onClick={[MockFunction]}
  >
    <div
      className="title-and-subtitle"
    >
      <div
        className="text-top"
      >
        <h2>
          Top channels
        </h2>
      </div>
      <div
        className="text-bottom"
      >
        Top channels subtitle
      </div>
    </div>
    <button
      aria-haspopup="dialog"
      aria-label="Open modal for Top channels"
      className="icon"
      onClick={[Function]}
    >
      <i
        className="icon icon-chevron-right"
      />
    </button>
  </CardHeader>
  <div
    className="Card__body expanded"
  >
    test data
  </div>
</Card>
`;

exports[`components/activity_and_insights/insights/insights_title should match snapshot with no data 1`] = `
<Card
  className="insights-card expanded small"
>
  <CardHeader
    onClick={[MockFunction]}
  >
    <div
      className="title-and-subtitle"
    >
      <div
        className="text-top"
      >
        <h2 />
      </div>
      <div
        className="text-bottom"
      />
    </div>
    <button
      aria-haspopup="dialog"
      aria-label="Open modal for "
      className="icon"
      onClick={[Function]}
    >
      <i
        className="icon icon-chevron-right"
      />
    </button>
  </CardHeader>
  <div
    className="Card__body expanded"
  />
</Card>
`;
